log
Tue 07 May 2024 02:49:34 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
93d2566
Tue 07 May 2024 02:49:53 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c1d4ae4
Tue 07 May 2024 02:54:18 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
f862249
Tue 07 May 2024 02:57:18 PM UTC: 
 treemap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  12|6
total_score: 15/70
15791ce
Tue 07 May 2024 03:30:53 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
60bd283
Tue 07 May 2024 03:36:16 PM UTC: 
 treemap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:108:24: error: variable ‘child’ set but not used [-Werror=unused-but-set-variable]
  108 |             TreeNode * child;
      |                        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
95dbfb2
Tue 07 May 2024 03:40:58 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  13|6
total_score: 20/70
70b9852
Tue 07 May 2024 03:41:42 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|6
total_score: 20/70
13dd96b
Tue 07 May 2024 03:53:31 PM UTC: 
 treemap.c | 86 +++++++++++++++++----------------------------------------------
 1 file changed, 23 insertions(+), 63 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:49:62: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   49 |     if (tree == NULL || key == NULL || value == NULL) return NULL;
      |                                                              ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7a1b26b
Tue 07 May 2024 03:53:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
b014efb
Tue 07 May 2024 04:05:55 PM UTC: 
 treemap.c | 35 ++++++++++++++++++++++++++++++++++-
 1 file changed, 34 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:109:51: error: expected ‘;’ before ‘}’ token
  109 |                 node->right->parent = node->parent
      |                                                   ^
      |                                                   ;
  110 |             }
      |             ~                                      
Compilation failed
c90b89f
Tue 07 May 2024 04:06:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c7695b3
Tue 07 May 2024 04:06:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2f940ec
Tue 07 May 2024 04:10:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
16c8b27
Tue 07 May 2024 04:20:44 PM UTC: 
 treemap.c | 24 ++++++++++++++++--------
 1 file changed, 16 insertions(+), 8 deletions(-)
 tests:  0|0
67c8435
Tue 07 May 2024 04:21:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
320a7c2
Tue 07 May 2024 04:24:12 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
b86248a
Tue 07 May 2024 04:27:23 PM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  25|1
total_score: 60/70
8d26130
Tue 07 May 2024 04:29:27 PM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
34b2a22
Tue 07 May 2024 04:33:10 PM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
70294c2
Tue 07 May 2024 06:42:20 PM UTC: 
 treemap.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  25|1
total_score: 60/70
4b766fd
Tue 07 May 2024 07:05:35 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:66:13: error: ‘else’ without a previous ‘if’
   66 |             else{
      |             ^~~~
treemap.c: At top level:
treemap.c:78:5: error: expected identifier or ‘(’ before ‘return’
   78 |     return;
      |     ^~~~~~
treemap.c:79:1: error: expected identifier or ‘(’ before ‘}’ token
   79 | }
      | ^
Compilation failed
001a46a
Tue 07 May 2024 07:06:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:13: error: expected ‘}’ before ‘else’
   64 |             else aux = aux->left;
      |             ^~~~
treemap.c:66:13: error: ‘else’ without a previous ‘if’
   66 |             else{
      |             ^~~~
treemap.c: At top level:
treemap.c:78:5: error: expected identifier or ‘(’ before ‘return’
   78 |     return;
      |     ^~~~~~
treemap.c:79:1: error: expected identifier or ‘(’ before ‘}’ token
   79 | }
      | ^
Compilation failed
9de4685
Tue 07 May 2024 07:07:29 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
fcd73fe
Tue 07 May 2024 07:08:13 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  22|2
total_score: 50/70
ed47372
Tue 07 May 2024 07:10:08 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:160:21: error: expected ‘;’ before ‘}’ token
  160 |     return aux->pair
      |                     ^
      |                     ;
  161 | }
      | ~                    
Compilation failed
f935ad9
